stderr
JudgeMan.java:10: error: ';' expected
            return "Three Card"
                               ^
1 error
